--- a/options.html
+++ b/options.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <title>Options - Google Events</title>
-
+    <script src="js/google.track.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
     <script type="text/javascript" src="js/jquery.gritter.min.js"></script>
-
     <style type="text/css">
 
         #buttons {
@@ -67,7 +66,7 @@
                 title: 'Google Events Options',
                 text: 'Settings Saved!'
             });
-			bp.update();
+			bp.update(true);
         }
         function go2antp() {
             window.location = "chrome-extension://mgmiemnjjchgkmgbeljfocdjjnpjnmcg/ntp.html";
